# UNIT

./: README.md  ft_round.c  lkl  main_d.c  main_exam.c
Push_swap/checker/: CMakeLists.txt  applay_instructions.c  check_instructions.c  checker.h  doubly_linked_list.c  main.c
Push_swap/lib/: Push_swap.h  get_next_line.h
Push_swap/push_swap/: CMakeLists.txt  bubble_sort.c  check_if_sort.c  doubly_linked_list.c  find_sort_algorithm.c  main.c  ps_applay_instructions.c  q_sort_1.c
exam/backtracking/: main.c  n.c
exam/brainfuck/: brainfuck.c  brainfuck.h  brainfuck_test.c  main.c  test  test1
exam/fprime/: fprime.c
exam/ft_itoa_base/: ft_itoa_base.c
exam/ft_list_foreach/: ft_list_foreach.c
exam/ft_list_remove_if/: ft_list.h  ft_list_remove_if.c
ft_printf/: Makefile  buf_printf.c  check_type.c  cpy_and_put_char.c  ft_atoi_mod.c  ft_itoa_base.c  ft_itoa_d.c  ft_itoa_p.c  ft_lentoc.c  ft_list.c  ft_modlst.c  ft_nbrlen.c  ft_printf.c  ft_printf.h  ft_putstr.c  ft_round.c  ft_strstr.c  help_check_type.c  help_mod_m_flag.c  main.c  mod_a.c  mod_and_print.c  mod_char.c  mod_double.c  mod_g.c  mod_i_d.c  mod_m_flag.c  mod_n.c  mod_r.c  mod_str.c  mod_unsigned.c  mod_void.c  processing_wint_t.c  read_arg.c  read_str.c
get_nex_line/: CMakeLists.txt  a.out  a.txt  file.txt  file2.txt  get_next_line.c  get_next_line.h  get_next_line_b.c  get_next_line_bonus.c  main.c  res.txt
get_next_line/: get_next_line.h
jjj/: file.txt  get_next_line_last.c  main.c  one_big_fat_line.txt
libft/: Makefile  ft_putstr_array.c  ft_strnew.c  ft_strsplit_lst.c
(+21 files in other folders)
